--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
   
-  <script>
-    const a = 10 , b = 20;
-    console.log(a+b);
-    console.log(a*b);
-    </script>
-    <script src="/1. core javascript/1. 자바스크립트 기초/입출력엽습.js"></script>
+
+    <script src="./2. 제어문/12. loop_nesting_quiz.js"></script>
 
 </body>
 </html>
