--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
 
-    <script src="./2. 제어문/12. loop_nesting_quiz.js"></script>
+    <script src="./2. 제어문/19. 사칙연산quiz.js"></script>
 
 </body>
 </html>
