--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
 
-    <script src="./2. 제어문/19. 사칙연산quiz.js"></script>
+    <script src="./1. core javascript/5. 객체/5. quiz2.js"></script>
 
 </body>
 </html>
