--- a/4. OOP/index.html
+++ b/4. OOP/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="js/this-practice.js" defer></script>
+  <!-- <script src="js/this-practice.js" defer></script> -->
+  <script src="js/call,apply,bind.js" defer></script>
 </head>
 <body>
 
 
   <button id="btn">버튼</button>
+  <input type="text" id="fruit">
 
   
 </body>
