--- a/4. OOP/index.html
+++ b/4. OOP/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- <script src="js/this-practice.js" defer></script> -->
-  <script src="js/call,apply,bind.js" defer></script>
+  <!-- <script src="js/call,apply,bind.js" defer></script> -->
+  <script src="js/arrow-fn-this.js" defer></script>
 </head>
 <body>
 
