# 실전예제: 동적 랜더링

--- a/4. OOP/index.html
+++ b/4. OOP/index.html
@@ -6,13 +6,13 @@
   <title>Document</title>
   <!-- <script src="js/this-practice.js" defer></script> -->
   <!-- <script src="js/call,apply,bind.js" defer></script> -->
-  <script src="js/arrow-fn-this.js" defer></script>
+   <link rel="stylesheet" href="css/main.css">
+   <script type="module" src="js/app.js" defer></script>
 </head>
 <body>
 
-
-  <button id="btn">버튼</button>
-  <input type="text" id="fruit">
+  <!-- CSR:동적 태그 렌더링 (REACT의 방식)-->
+  <div id="app"></div>
 
   
 </body>
